# internal-repos-proj

./: .gitignore  BedrockMantleDoc.md  CONTRIBUTING_TEMPLATES.md  README.md  architecture.md  package-lock.json  package.json  tags.json  vitest.config.ts
frontend/: index.html  package.json  tsconfig.json  (+1 more)
templates/chatbot-rag-agentcore-ecs-ws-streaming/: README.md  metadata.json  pyproject.toml
templates/chatbot-rag-agentcore-ecs-ws-streaming/docs/arquitetura/: .$chatbot-agentcore-ecs-ws-streaming.drawio.bkp  chatbot-agentcore-ecs-ws-streaming.drawio
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/environment/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/environment/staging/: main.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/modules/dynamodb/: main.tf  outputs.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/modules/ecr/: outputs.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/modules/ecs/: iam.tf  service.tf  task_definition.tf  variables.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/modules/nlb/: variables.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/modules/s3/: main.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/infra/modules/websocket_api/: outputs.tf  variables.tf
templates/chatbot-rag-agentcore-ecs-ws-streaming/src/app/: __init__.py  config.py  conversation_context.py  logging_config.py  main.py  message_sender.py  orchestrator.py
templates/chatbot-rag-agentcore-ecs-ws-streaming/tests/: conftest.py
templates/chatbot-rag-agentcore-ecs-ws-streaming/tests/unit/: test_ai_caller.py  test_orchestrator.py  test_streaming.py
templates/chatbot-rag-agentcore-ws/: README.md  metadata.json  pyproject.toml
templates/chatbot-rag-agentcore-ws/docs/: architecture.drawio
templates/chatbot-rag-agentcore-ws/docs/arquitetura/: .$chatbot-agentcore-ws-non-streaming.drawio.bkp  chatbot-agentcore-ws-non-streaming.drawio
templates/chatbot-rag-agentcore-ws/infra/environment/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
templates/chatbot-rag-agentcore-ws/infra/modules/agentcore/: main.tf
templates/chatbot-rag-agentcore-ws/infra/modules/dynamodb/: main.tf
templates/chatbot-rag-agentcore-ws/infra/modules/sqs/: main.tf  variables.tf
templates/chatbot-rag-agentcore-ws/infra/modules/websocket_api/: main.tf  outputs.tf  variables.tf
templates/chatbot-rag-agentcore-ws/src/ai_caller/: handler.py
templates/chatbot-rag-agentcore-ws/src/connection_manager/: handler.py
templates/chatbot-rag-agentcore-ws/src/orchestrator/: handler.py
templates/chatbot-rag-agentcore-ws/tests/: conftest.py
templates/chatbot-rag-agentcore-ws/tests/unit/: test_ai_caller.py  test_orchestrator.py
templates/chatbot-rag-mantle/: README.md  metadata.json  pyproject.toml
templates/chatbot-rag-mantle-ws/: .gitignore  README.md  metadata.json  pyproject.toml
templates/chatbot-rag-mantle-ws-streaming/: Makefile  README.md  metadata.json  pyproject.toml
templates/chatbot-rag-mantle-ws-streaming/docs/arquitetura/: .$chatbot-mantle-ws-streaming.drawio.bkp  chatbot-mantle-ws-streaming.drawio
templates/chatbot-rag-mantle-ws-streaming/infra/environment/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
templates/chatbot-rag-mantle-ws-streaming/infra/modules/dynamodb/: outputs.tf
templates/chatbot-rag-mantle-ws-streaming/src/ai_caller/: handler.py  requirements.txt
templates/chatbot-rag-mantle-ws-streaming/src/orchestrator/: handler.py
templates/chatbot-rag-mantle-ws-streaming/tests/unit/: __init__.py  test_streaming_orchestrator.py
templates/chatbot-rag-mantle-ws/docs/arquitetura/: .$chatbot-mantle-ws-non-streaming.drawio.bkp  chatbot-mantle-ws-non-streaming.drawio
templates/chatbot-rag-mantle-ws/src/ai_caller/: handler.py
templates/chatbot-rag-mantle-ws/src/orchestrator/: handler.py
templates/chatbot-rag-mantle-ws/src/tool_executor/: handler.py
templates/chatbot-rag-mantle/docs/arquitetura/: .$chatbot-mantle-api-no-streaming.drawio.bkp  chatbot-mantle-api-no-streaming.drawio
templates/chatbot-rag-mantle/infra/openapi/: api-spec.json
templates/chatbot-rag-mantle/src/ai_caller/: handler.py  requirements.txt
templates/chatbot-rag-mantle/src/kb_sync/: handler.py
templates/chatbot-rag-mantle/src/orchestrator/: handler.py
templates/chatbot-rag-mantle/src/responses_reader/: handler.py
templates/chatbot-rag-mantle/src/tool_executor/: handler.py
templates/chatbot-rag-mantle/tests/: conftest.py  test_ai_caller.py  test_kb_sync.py  test_orchestrator.py  test_responses_reader.py  test_tool_executor.py
(+610 files in other folders)
