[project]
name = "chatbot-rag-mantle-ws-streaming"
version = "0.1.0"
description = "Chatbot RAG with Bedrock Mantle API, Lambda compute, WebSocket transport, streaming AI responses"
requires-python = ">=3.12"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
    "hypothesis>=6.100",
    "moto>=5.0",
    "boto3>=1.34",
    "boto3-stubs[dynamodb,s3,apigatewaymanagementapi]>=1.34",
    "openai>=1.30",
    "aws-lambda-powertools>=2.30",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/layers/shared/python/shared", "src/orchestrator", "src/ai_caller", "src/tool_executor", "src/connection_manager"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "COM", "C4", "PT", "RET", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/layers/shared/python", "src"]
