[project]
name = "chatbot-rag-mantle"
version = "0.1.0"
description = "Chatbot RAG template using Bedrock Mantle API"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools[all]~=3.4",
    "boto3>=1.34.0,<2.0.0",
    "openai>=1.50.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest~=8.0",
    "hypothesis~=6.100",
    "ruff~=0.11",
    "pytest-mock~=3.14",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) — allowed with comment
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/orchestrator", "src/ai_caller", "src/tool_executor", "src/responses_reader", "src/kb_sync", "src/layers/shared/python"]
